Improved recipe readability and homepage button, need to fix alignment with flex

--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
 }
 
 .recipes-bg {
-    background-image: url("images/recipes-bg.jpg");
+    background-image: url("images/blurred-recipes-bg.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
@@ -66,6 +66,8 @@ ol {
 
 button {
     background-color: black;
+    padding: 12px 24px;
+    margin-bottom: 20px;
     color: white;
     font-size: 30px;
 }
